tooling/nargo_cli/tests/snapshots/execution_success/regression_9312/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: bool) -> pub ((u32, Field), (u32, Field)) {
    let s0: [Field] = if a {
        [10_Field, 20_Field].as_vector()
    } else {
        [30_Field, 40_Field, 50_Field].as_vector()
    };
    let (s1, f): ([Field], Field) = s0.pop_back();
    let s2: [Field] = s0.push_back(60_Field);
    ((s1.len(), f), (s2.len(), s2[2_u32]))
}
